unpackaged/main/default/objects/fferpcore__TaxDetail__c/fferpcore__TaxDetail__c.object-meta.xml
<CustomObject>
    <customHelpPage>fferpcore__TaxDetailHelp</customHelpPage>
    <description>Stores sales and use tax details by jurisdiction for specific billing document line items.</description>
    <label>Tax Breakdown</label>
    <nameField>
        <displayFormat>TB{0000000}</displayFormat>
        <label>Tax Breakdown ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Breakdowns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>