unpackaged/main/default/objects/fferpcore__TaxDetail__c/fields/fferpcore__BillingDocumentLineItem__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__BillingDocumentLineItem__c</fullName>
    <description>Billing document line item to which this tax breakdown relates.</description>
    <label>Billing Document Line Item</label>
    <referenceTo>fferpcore__BillingDocumentLineItem__c</referenceTo>
    <relationshipLabel>Tax Jurisdiction Breakdown</relationshipLabel>
    <relationshipName>TaxDetails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>