unpackaged/main/default/objects/fferpcore__TaxDetail__c/fields/fferpcore__Country__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Country__c</fullName>
    <description>Country of the tax jurisdiction.</description>
    <label>Country</label>
    <length>3</length>
    <type>Text</type>
</CustomField>