unpackaged/main/default/objects/fferpcore__TaxDetail__c/fields/fferpcore__JurisdictionCode__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__JurisdictionCode__c</fullName>
    <description>Code of the tax jurisdiction.</description>
    <label>Jurisdiction Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>