unpackaged/main/default/objects/fferpcore__TaxDetail__c/fields/fferpcore__JurisdictionName__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__JurisdictionName__c</fullName>
    <description>Name of the tax jurisdiction.</description>
    <label>Jurisdiction Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>