unpackaged/main/default/objects/fferpcore__TaxDetail__c/fields/fferpcore__JurisdictionType__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__JurisdictionType__c</fullName>
    <description>Type of the tax jurisdiction.</description>
    <label>Jurisdiction Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>