unpackaged/main/default/objects/fferpcore__TaxDetail__c/fields/fferpcore__Rate__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Rate__c</fullName>
    <description>Tax rate for the tax jurisdiction.</description>
    <label>Rate</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>